fixing z-index button

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -39,6 +39,7 @@
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
+    z-index: 1;
   }
 }
 
